platform/cloudbeaver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudbeaver
  namespace: pinlog-prod
  labels:
    app.kubernetes.io/name: cloudbeaver
    app.kubernetes.io/part-of: pinlog
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cloudbeaver
  ports:
    - name: http
      protocol: TCP
      port: 8978
      targetPort: http
